--- a/depthhand-wpf/MainWindow.xaml
+++ b/depthhand-wpf/MainWindow.xaml
@@ -1,13 +1,15 @@
 ﻿<Window x:Name="depth_hand" x:Class="depthhand_wpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="kinect hand" Height="387" Width="398">
+        Title="kinect hand" Height="551.44" Width="722.626">
     <Grid>
-        <Canvas x:Name="imageCanvas" HorizontalAlignment="Left" Height="336" Margin="10,10,0,0" VerticalAlignment="Top" Width="370">
+        <Canvas x:Name="imageCanvas" HorizontalAlignment="Left" Height="500" Margin="10,10,0,0" VerticalAlignment="Top" Width="695">
             <Label x:Name="label" Content="z" Canvas.Left="25" Canvas.Top="278" Width="326"/>
+            <Label x:Name="label1" Content="Label" Canvas.Left="25" Canvas.Top="312" Width="646" Height="78"/>
         </Canvas>
         <Viewbox HorizontalAlignment="Left" Height="240" VerticalAlignment="Top" Width="320" Margin="35,29,0,0"/>
         <Image x:Name="Image" HorizontalAlignment="Left" Height="240" Margin="35,29,0,0" VerticalAlignment="Top" Width="320"/>
-        <Button x:Name="StartStopButton" Content="Start" HorizontalAlignment="Left" Margin="161,322,0,0" VerticalAlignment="Top" Width="75" Click="StartStopButton_Click"/>
+        <Button x:Name="StartStopButton" Content="Start" HorizontalAlignment="Left" Margin="149,480,0,0" VerticalAlignment="Top" Width="75" Click="StartStopButton_Click"/>
+        <Label x:Name="label2" Content="Label2" HorizontalAlignment="Left" Margin="35,408,0,0" VerticalAlignment="Top" Width="546"/>
     </Grid>
 </Window>
